--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "java.jdt.ls.java.home": "~/.sdkman/candidates/java/current",
+    "java.jdt.ls.java.home": "c:\\Program Files\\Java\\jdk-20",
     "java.inlayHints.parameterNames.enabled": "none",
     "maven.terminal.useJavaHome": true,
     "java.completion.favoriteStaticMembers": [
